Versão inicial do app de festa6

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
     // --------- LOGIN SIMPLES ---------
     // Troque AQUI a senha da família (se quiser):
-    const SENHA_FAMILIA = "1234";
+    const SENHA_FAMILIA = "salvador1234";
     let usuarioAtual = null;
 
     const areaLogin = document.getElementById("areaLogin");
